// Copyright 2021 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package normalization;

import "google/protobuf/empty.proto";

service Normalization {
  rpc Unary(google.protobuf.Empty) returns (FunctionName) {}
  rpc unary(google.protobuf.Empty) returns (FunctionName) {}

  rpc ServerStreaming(google.protobuf.Empty) returns (stream FunctionName) {}
  rpc serverStreaming(google.protobuf.Empty) returns (stream FunctionName) {}

  rpc ClientStreaming(stream google.protobuf.Empty) returns (FunctionName) {}
  rpc clientStreaming(stream google.protobuf.Empty) returns (FunctionName) {}

  rpc BidirectionalStreaming(stream google.protobuf.Empty) returns (stream FunctionName) {}
  rpc bidirectionalStreaming(stream google.protobuf.Empty) returns (stream FunctionName) {}
}

message FunctionName {
  // The name of the invoked function.
  string functionName = 1;
}
